--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "sass": "^1.77.8"
   },
   "devDependencies": {
