--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.20.5",
     "bootstrap": "^5.3.3",
     "firebase": "^10.13.0",
     "next": "14.2.6",
