--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-tag-input": "^6.10.3",
     "sass": "^1.77.8"
   },
   "devDependencies": {
